All landings have content

--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -151,60 +151,60 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Question 1
+                  How long is it OK to be in a calorie deficit?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro natus sequi corrupti architecto dolorum alias, fuga iste pariatur consectetur consequuntur!
+                  We do not suggest eating in a fat loss deficit for more than 12 weeks or extreme fat loss deficit for more than 4-6 weeks. If you're struggling to eat all of your calories or macros, start by increasing your intake 100 calories each week until you work your way up to maintenance.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Question 2
+                  How long does a calorie deficit take to see results?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia laboriosam necessitatibus quos sed ut cumque totam eos sit porro repellat.
+                  Individual weight-loss experiences and time frames can vary heavily. However, most people who start dieting by cutting out a certain amount of calories each day will see results within one to two weeks, even if it's just one pound lost
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Question 3
+                  Why am I not losing weight with calorie deficit?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident fuga sed consectetur repellendus excepturi vero mollitia officiis voluptas et eveniet!
+                <div class="accordion-body">         
+                  If you're not losing weight in a calorie deficit you may need to adjust your stress levels, diet, and sleep patterns. Other reasons for weight gain during a calorie deficit are hormonal changes, aging, and other health conditions.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFour">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    Question 4
+                    What happens if you stay in a calorie deficit for too long?
                   </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi quibusdam atque aspernatur repudiandae corrupti voluptatum minus inventore voluptates deleniti fuga!
+                    Severely restricting your calories can decrease your metabolism and cause you to lose muscle mass. This makes it more difficult to maintain your weight loss in the long term.
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFive">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                    Question 5
+                    Is calorie deficit a safe way to lose weight?
                   </button>
                 </h2>
                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non vel voluptates totam? Eligendi at iusto consectetur quasi quas, odit distinctio.
+                    Yes. The very basics of weight loss do come down to reducing your calorie count and increasing your activity level. Healthline reports that for many people, a deficit of around 500 calories is healthy, effective, and sustainable.
                   </div>
                 </div>
               </div>
