--- a/pages/recipes-highprotein-green-pie.html
+++ b/pages/recipes-highprotein-green-pie.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Green pie</h2>
                 <h4>429 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>This easy, budget-friendly and high protein recipe is simple enough to make on a weeknight and great for feeding a family.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein">21,6g protein</div>
                     <div class="recipe__carbs">70,2g carbs</div>
@@ -97,7 +97,10 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Cook all the vegetables in a frypan for about 15-20 minutes.</p>
+                <p>Leave to cool for a bit and then add the eggs and the cottage cheese.</p>
+                <p>Gently pour the mix into a frying pan over medium-low heat. Cook the green pie for about six to eight minutes on the first side. You can run a spatula along the sides to make sure it's not sticking. Flip the tortilla and cook it on the other side, you can help yourself with a big plate.</p>
+                <p>Add some light cheese on the top and enjoy!</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
