--- a/pages/recipes-highprotein-marbled-pudding.html
+++ b/pages/recipes-highprotein-marbled-pudding.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Marbled pudding</h2>
                 <h4>92 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p> A simple pudding recipe with few ingredients comes together Marble pudding! Perfect for breakfast or snacks.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 10,2g protein</div>
                     <div class="recipe__carbs">5,7g carbs</div>
@@ -99,7 +99,10 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p><span>Heat the oven to 180°C </span></p>
+                <p>Mix all the ingredents leaving apart the cacao powder. Once the dough is done, divide it into 2 parts and add the cacao powder to one of them.</p>
+                <p>Spoon alternate spoonfuls of each mixture into the pudding basin until three quarters full. Using a flat knife, swirl the mixture to create marbling.</p>
+                <p>Pour enough boiling water into the tin to come one third of the way up the basin and steam for about 1½ hours or until firm.</p>
                 <div class="shop-ingredient">
                     <a href="./shop-whey-protein.html">SHOP WHEY PROTEIN</a>
                 </div>
