--- a/pages/recipes-highprotein-spanish-tortilla.html
+++ b/pages/recipes-highprotein-spanish-tortilla.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Spanish tortilla</h2>
                 <h4>400 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>A classical spanish recipe that it's the perfect breakfast, lunch, snack, or dinner.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 21,6g protein</div>
                     <div class="recipe__carbs">70,2g carbs</div>
@@ -94,7 +94,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Peel and chop all the potatoes and boil until they are soft.</p>
+                <p>In a frypan, cook the onions and capsicum for about 10 minutes and then mixed with potatoes, adding also the eggs and the cottage cheese.</p>
+                <p>Gently pour the tortilla mix into a frying pan over medium-low heat. Cook the tortilla for about six to eight minutes on the first side. You can run a spatula along the sides to make sure it's not sticking. Flip the tortilla and cook it on the other side, you can help yourself with a big plate.</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
