--- a/pages/recipes-lowcalories-apple-crumble.html
+++ b/pages/recipes-lowcalories-apple-crumble.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Apple crumble</h2>
                 <h4>93 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p> Apple Crumble is an absolute crowd pleaser! Very easy to make, this Apple Crumble recipe is a keeper that you;ll make again and again.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 7,8g protein</div>
                     <div class="recipe__carbs">9,6g carbs</div>
@@ -86,7 +86,7 @@
                 <ul>
                     <li>20g cornflour</li>
                     <li>3 eggs</li>
-                    <li>200g natural sweetner</li>
+                    <li>200g natural sweetener</li>
                     <li>400g plain protein yoghurt</li>
                     <li>4 apples</li>
                 </ul>
@@ -94,7 +94,10 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p><span>Pre-heat the oven to 190 C</span></p>
+                <p>Mix the cornflour with the sweetener and eggs to make a base in an oven container.</p>
+                <p>Placed the apples (previously peeled and chopped) all over the dough and take to the oven for 35-40 minutes.</p>
+                <p>Leave to cool and add yoghurt on the top!</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
