--- a/pages/recipes-lowcalories-eggplant-schnitzel.html
+++ b/pages/recipes-lowcalories-eggplant-schnitzel.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Eggplant schnitzel</h2>
                 <h4>58 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>A good source of vitamin B6 that plays a role in hundreds of biochemical reactions in the body, including contributing to energy metabolism.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 3,2g protein</div>
                     <div class="recipe__carbs">7,8g carbs</div>
@@ -92,7 +92,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Preheat oven to 220°C. Place the eggplant slices on 2 large oven trays. Sprinkle each side with the salt and set aside for 20 minutes. </p>
+                <p>Dip the slices into the egg mixture and press into the crumb mixture to coat. </p>
+                <p>Cook for 15-20 minutes or until tender.</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
