--- a/pages/recipes-lowcalories-quinoa-burger.html
+++ b/pages/recipes-lowcalories-quinoa-burger.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Quinoa burger</h2>
                 <h4>92 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>This quinoa burger is one meatless option that even meat-lovers will crave! Each burger has about 4 grams of protein and less than 100 calories.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 3,9g protein</div>
                     <div class="recipe__carbs">13,7g carbs</div>
@@ -95,7 +95,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Chop the vegetables and fry all together in a frypan.</p>
+                <p>Cook the quinoa and mix it with the vegetables adding the 2 eggs and the breadcrumbs.</p>
+                <p>Form the 12 burgers and cook in a frypan or oven!</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
