--- a/pages/recipes-lowcalories-vegetable-soup.html
+++ b/pages/recipes-lowcalories-vegetable-soup.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Vegetable soup</h2>
                 <h4>105 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>This rustic vegetable soup is made with a medley of vegetables. Sprinkle some Parmesan (optional) on top for a hearty and warming meal.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 3,1g protein</div>
                     <div class="recipe__carbs">21,8g carbs</div>
@@ -95,7 +95,8 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>In a large saucepan, boil the garlic, carrots, zuccini, sweet potatoes, onions and leeks gently. Keep the heat low and stir often, until soft, but not browned.</p>
+                <p><span>Soup is done!</span> Cool at room temperature. Freeze (without garnishes or toppings) in a rigid container, leaving a bit of space for expansion, for up to 1-3 months. Reheat either from frozen or defrost in the fridge overnight. Once piping hot, add toppings (optional) or garnishes and serve.</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
