--- a/pages/recipes-lowfat-spinach-burgers.html
+++ b/pages/recipes-lowfat-spinach-burgers.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Spinach burgers</h2>
                 <h4>50 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>This vegetarian spinach burger recipe can be frozen, letting you get ahead on busy days!</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 3,6g protein</div>
                     <div class="recipe__carbs">5,8g carbs</div>
@@ -95,7 +95,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Using frypan, fry the onions for about 10 mins until pale and soft, then add the capsicum and the carrots (previously grated) for about 15 more minutes and leave it to cool a little.</p>
+                <p>Boil the froze spinach for about 3 minutes and add it to the vegetables. Add also the cottage cheese and mash together. Add the egg, until the mixture holds together. Divide into ten and shape into burgers.</p>
+                <p><span>Either chill until ready to cook, or freeze!</span></p>
             </div>
         </div>
         <div class="recipe__secondary__container">
