--- a/pages/recipes-lowfat-whole-wheat-pancakes.html
+++ b/pages/recipes-lowfat-whole-wheat-pancakes.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Whole wheat pancakes</h2>
                 <h4>74 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>These Whole Wheat Pancakes are made with 100% whole wheat flour and taste absolutely delicious! They’re a healthier option to enjoy for breakfast or brunch.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 2,7g protein</div>
                     <div class="recipe__carbs">13,3g carbs</div>
@@ -91,7 +91,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Combine the whole wheat flour with the almond milk. Then take 2 spoons and cook the pancakes for a few minutes until bubbles start to form on the top.
+                </p>
+                <p>Check that it’s golden underneath, then flip and cook for another couple minutes.</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
