calculator changed + fixed responsive

--- a/pages/recipes-highprotein-green-pie.html
+++ b/pages/recipes-highprotein-green-pie.html
@@ -112,11 +112,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/protein-cookies.png" alt="protein-cookies">
+                  <a href="./recipes-highprotein-protein-cookies.html"><img src="../img/protein-cookies.png" alt="protein-cookies"></a>
                     <a href="./recipes-highprotein-protein-cookies.html">Protein cookies</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/spanish-potatoe-tortilla.png" alt="spanish-tortilla">
+                  <a href="./recipes-highprotein-spanish-tortilla.html"><img src="../img/spanish-potatoe-tortilla.png" alt="spanish-tortilla"></a> 
                     <a href="./recipes-highprotein-spanish-tortilla.html">Spanish tortilla</a> 
                 </div>
             </div>
