--- a/pages/recipes-highprotein-marbled-pudding.html
+++ b/pages/recipes-highprotein-marbled-pudding.html
@@ -117,11 +117,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/protein-cookies.png" alt="protein-cookies">
+                  <a href="./recipes-highprotein-protein-cookies.html"><img src="../img/protein-cookies.png" alt="protein-cookies"></a>
                     <a href="./recipes-highprotein-protein-cookies.html">Protein cookies</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/Green-pie.png" alt="green-pie">
+                  <a href="./recipes-highprotein-green-pie.html"><img src="../img/Green-pie.png" alt="green-pie"></a> 
                     <a href="./recipes-highprotein-green-pie.html">Green pie</a> 
                 </div>
             </div>
