--- a/pages/recipes-lowcalories-apple-crumble.html
+++ b/pages/recipes-lowcalories-apple-crumble.html
@@ -109,11 +109,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/quinoa-burger.png" alt="quinoa-burger">
+                  <a href="./recipes-lowcalories-quinoa-burger.html"><img src="../img/quinoa-burger.png" alt="quinoa-burger"></a>
                     <a href="./recipes-lowcalories-quinoa-burger.html">Quinoa burger</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel">
+                  <a href="./recipes-lowcalories-eggplant-schnitzel.html"><img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel"></a> 
                     <a href="./recipes-lowcalories-eggplant-schnitzel.html">Eggplant schnitzel</a> 
                 </div>
             </div>
