--- a/pages/recipes-lowcalories-eggplant-schnitzel.html
+++ b/pages/recipes-lowcalories-eggplant-schnitzel.html
@@ -106,11 +106,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/quinoa-burger.png" alt="quinoa-burger">
+                  <a href="./recipes-lowcalories-quinoa-burger.html"><img src="../img/quinoa-burger.png" alt="quinoa-burger"></a> 
                     <a href="./recipes-lowcalories-quinoa-burger.html">Quinoa burger</a> 
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/apple-crumble.png" alt="apple-crumble">
+                  <a href="./recipes-lowcalories-apple-crumble.html"><img src="../img/apple-crumble.png" alt="apple-crumble"></a> 
                     <a href="./recipes-lowcalories-apple-crumble.html">Apple crumble</a> 
                 </div>
             </div>
