--- a/pages/recipes-lowcalories-quinoa-burger.html
+++ b/pages/recipes-lowcalories-quinoa-burger.html
@@ -109,11 +109,11 @@
           </div>
           <div class="recipe__options">
               <div class="recipe__option__1">
-                  <img src="../img/vegetable-soup.jpeg" alt="vegetable-soup">
-                  <a href="./recipes-lowcalories-vegetable_soup.html">Vegetable soup</a> 
+                <a href="./recipes-lowcalories-vegetable-soup.html"><img src="../img/vegetable-soup.jpeg" alt="vegetable-soup"></a> 
+                  <a href="./recipes-lowcalories-vegetable-soup.html">Vegetable soup</a> 
               </div>
               <div class="recipe__option__2">
-                  <img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel">
+                <a href="./recipes-lowcalories-eggplant-schnitzel.html"><img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel"></a> 
                   <a href="./recipes-lowcalories-eggplant-schnitzel.html">Eggplant schnitzel</a> 
               </div>
           </div>
