--- a/pages/recipes-lowcalories.html
+++ b/pages/recipes-lowcalories.html
@@ -73,9 +73,9 @@
               When it comes to low-calorie meals, we're fans of recipes that go hard on flavorful, nutrient-packed ingredients like fresh seafood, colorful veg and filling whole grains.
             </div>
         </section>
-        <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
+        <!--recipes-->
         <section class="recipes__cards">
-            <div class="card card1" style="width: 18rem;">
+            <div class="card card1">
                 <img src="../img/vegetable-soup.jpeg" class="card-img-top" alt="vegetable-soup">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Vegetable soup</h5>
@@ -90,7 +90,7 @@
                   <a href="./recipes-lowcalories-vegetable-soup.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card2" style="width: 18rem;">
+              <div class="card card2">
                 <img src="../img/quinoa-burger.png" class="card-img-top" alt="quinoa-burger">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Quinoa burger</h5>
@@ -105,7 +105,7 @@
                   <a href="./recipes-lowcalories-quinoa-burger.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card3" style="width: 18rem;">
+              <div class="card card3">
                 <img src="../img/eggplant-schnitzel.png" class="card-img-top" alt="eggplant_schnitzel">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Eggplant schnitzel</h5>
@@ -120,7 +120,7 @@
                   <a href="./recipes-lowcalories-eggplant-schnitzel.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card4" style="width: 18rem;">
+              <div class="card card4">
                 <img src="../img/apple-crumble.png" class="card-img-top" alt="apple-crumble">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Apple crumble</h5>
