--- a/pages/recipes-lowfat-spinach-burgers.html
+++ b/pages/recipes-lowfat-spinach-burgers.html
@@ -109,11 +109,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/wholemeal-bread.png" alt="wholemeal-bread">
+                    <a href="./recipes-lowfat-wholemeal-bread.html"><img src="../img/wholemeal-bread.png" alt="wholemeal-bread"></a>
                     <a href="./recipes-lowfat-wholemeal-bread.html">Wholemeal bread</a> 
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/yoghurt-caramel-ice-cream.png" alt="yoghurt-caramel-ice-cream">
+                  <a href="./recipes-lowfat-yoghurt-caramel-ice-cream.html"><img src="../img/yoghurt-caramel-ice-cream.png" alt="yoghurt-caramel-ice-cream"></a>
                     <a href="./recipes-lowfat-yoghurt-caramel-ice-cream.html">Yoghurt & caramel ice-cream</a> 
                 </div>
             </div>
