--- a/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
+++ b/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
@@ -105,11 +105,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/spinach-burgers.png" alt="spinach-burgers">
-                    <a href="./recipes-lowfat-spinach-burgers">Spinach burgers</a> 
+                  <a href="./recipes-lowfat-spinach-burgers.html"><img src="../img/spinach-burgers.png" alt="spinach-burgers"></a> 
+                    <a href="./recipes-lowfat-spinach-burgers.html">Spinach burgers</a> 
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/whole-wheat-pancakes.png" alt="whole-wheat-pancakes">
+                  <a href="./recipes-lowfat-whole-wheat-pancakes.html"><img src="../img/whole-wheat-pancakes.png" alt="whole-wheat-pancakes"></a> 
                     <a href="./recipes-lowfat-whole-wheat-pancakes.html">Whole wheat pancakes</a> 
                 </div>
             </div>
