--- a/pages/recipes-lowfat.html
+++ b/pages/recipes-lowfat.html
@@ -75,7 +75,7 @@
         </section>
         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
         <section class="recipes__cards">
-            <div class="card card1" style="width: 18rem;">
+            <div class="card card1">
                 <img src="../img/whole-wheat-pancakes.png" class="card-img-top" alt="whole-wheat-pancakes">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Whole wheat pancakes</h5>
@@ -90,7 +90,7 @@
                   <a href="./recipes-lowfat-whole-wheat-pancakes.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card2" style="width: 18rem;">
+              <div class="card card2">
                 <img src="../img/wholemeal-bread.png" class="card-img-top" alt="wholemeal-bread">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Wholemeal bread</h5>
@@ -105,7 +105,7 @@
                   <a href="./recipes-lowfat-wholemeal-bread.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card3" style="width: 18rem;">
+              <div class="card card3">
                 <img src="../img/yoghurt-caramel-ice-cream.png" class="card-img-top" alt="yoghurt-caramel-ice-cream">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Yoghurt & caramel ice-cream</h5>
@@ -120,7 +120,7 @@
                   <a href="./recipes-lowfat-yoghurt-caramel-ice-cream.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card4" style="width: 18rem;">
+              <div class="card card4">
                 <img src="../img/spinach-burgers.png" class="card-img-top" alt="spinach-burgers">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Spinach burgers</h5>
