--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -77,7 +77,8 @@
             </div>
             <div class="shop__title">
                 <h3>Shakers</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque ex, accusamus eligendi placeat quisquam impedit?</p>
+                <p>The super success Smartshake, now in an even slimmer and handy version! Stylish, practical and smart!</p>
+                <p>A slimmer version, Smartshake Slim, is now being launched. A little thinner, a little smaller, but just as well designed and practical as ever!</p>
                 <div class="shop__variations">
                     <div class="dropdown">
                         <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -140,7 +141,14 @@
         <div class="shop__primary__container">
             <div class="product__description">
                 <h5>Description</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam facere nulla tenetur quis dignissimos temporibus rem incidunt dolorum itaque voluptatum laudantium, doloribus iusto quae voluptates dicta, harum pariatur nisi doloremque.</p>
+                <p>
+                  <li>Extra thick strips on the lid make it easier to screw on</li>
+                  <li>Conical grid that is simply pressed into the lid and eliminates lumps and gives your drinks a perfect consistency</li>
+                  <li>Non-toxic plastic, BPA and DEHP free</li>
+                  <li>Tolerates both dishwasher, microwave and freezer. (Heat liquid up to 120 ° C)</li>
+                  <li>The product is completely recyclable</li>
+                  <li>Designed and developed in Denmark</li>
+                </p>
             </div>
         </div>
         <!--categories shop-->
