--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -62,153 +62,154 @@
               </nav>
         </nav>
     </header>
-    <main class="calculatorLanding">
-        <div class="calculator">
-            <h4>Calculate your own calorie deficit</h4>
-            <form class="form" action="input">
-                <div class="form1">
-                <p>Gender</p>
-                <div>
-                    <input type="radio" name="gender" id="gender"> Female
-                </div>
-                <div>
-                    <input type="radio" name="gender" id="gender"> Male
-                </div>
-                <div>
-                    <input type="radio" name="gender" id="gender"> Prefer not to say
-                </div>
-                </div>
-                <div class="form1">
-                <p>Age</p>
-                    <div>
-                        <input type="radio" name="age" id="age"> 18 - 25
-                    </div>
-                    <div>
-                        <input type="radio" name="age" id="age"> 25 - 29
-                    </div>
-                    <div>
-                        <input type="radio" name="age" id="age"> 30 - 35
-                    </div>
-                    <div>
-                        <input type="radio" name="age" id="age"> 36 - 40
-                    </div>
-                    <div>
-                        <input type="radio" name="age" id="age"> +41
-                    </div>
-                </div>
-                <div class="form1">
-                <p>Activity level</p>
-                    <div>
-                        <input type="radio" name="activity" id="activity"> Very active
-                    </div>
-                    <div>
-                        <input type="radio" name="activity" id="activity"> Active
-                    </div>
-                    <div>
-                        <input type="radio" name="activity" id="activity"> Not too active
-                    </div>
-                    <div>
-                        <input type="radio" name="activity" id="activity"> Not active at all
-                    </div>
-                </div>
-                <div class="form1">
-                <p>Height</p>
-                    <div>
-                        <input type="radio" name="height" id="height"> - 150 cms
-                    </div>
-                    <div>
-                        <input type="radio" name="height" id="height"> 151 - 165 cms
-                    </div>
-                    <div>
-                        <input type="radio" name="height" id="height"> 166 - 175 cms
-                    </div>
-                    <div>
-                        <input type="radio" name="height" id="height"> 176 - 185 cms
-                    </div>
-                    <div>
-                        <input type="radio" name="height" id="height"> +186 cms
-                    </div>
-                </div>
-            </form>
-            <button class="calcCD" type="submit">CALCULATE</button>
+    <main id="bodyCalculator">
+      <div class="calculator__container">
+        <div class="calculator__title">
+            <h4>Calculator</h4>
+            <p class="calculator_text">Calculate the number of daily calories needed to maintain, lose, or gain weight.</p>
         </div>
-        <!--results - falta hacer funcional el formulario y que los resultados se vean reflejados en los espacios correspondientes-->
-        <section class="result">
-            <h2>Your result is</h2>
-            <h3><span class="resultCal">----</span> calories per day</h3>
-            <ul class="resultList">
-                <li>If you need to loss some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
-                <li>If you want to mantein your weight you should consume <span class="resultCal">----</span> calories per day.</li>
-                <li>If you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
-            </ul>
-            <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
-        </section>
-
-        <!--faqs questions-->
-
-        <h3 class="faqs">F.A.Q.</h3>
-        <div class="accordion m-lg-5 m-md-3 m-sm-1 bg-light p-3" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  How long is it OK to be in a calorie deficit?
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  We do not suggest eating in a fat loss deficit for more than 12 weeks or extreme fat loss deficit for more than 4-6 weeks. If you're struggling to eat all of your calories or macros, start by increasing your intake 100 calories each week until you work your way up to maintenance.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  How long does a calorie deficit take to see results?
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  Individual weight-loss experiences and time frames can vary heavily. However, most people who start dieting by cutting out a certain amount of calories each day will see results within one to two weeks, even if it's just one pound lost
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Why am I not losing weight with calorie deficit?
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">         
-                  If you're not losing weight in a calorie deficit you may need to adjust your stress levels, diet, and sleep patterns. Other reasons for weight gain during a calorie deficit are hormonal changes, aging, and other health conditions.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    What happens if you stay in a calorie deficit for too long?
-                  </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    Severely restricting your calories can decrease your metabolism and cause you to lose muscle mass. This makes it more difficult to maintain your weight loss in the long term.
+        <div class="calculator__items" id="calculator">
+            <div class="calculator__gender mobile">
+                <h5>Gender</h5>
+                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                    <label class="btn btn-outline-secondary button__style" for="btnradio1">Female</label>
+                  
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                    <label class="btn btn-outline-secondary button__style" for="btnradio2">Male</label>
+                  
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                    <label class="btn btn-outline-secondary button__style" for="btnradio3">Other</label>
                   </div>
+            </div>
+            <div class="calculator__age mobile">
+                <h5>Age</h5>
+                <div>
+                    <input type="number" min="18" max="150" placeholder="30" required name="age">
                 </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                    Is calorie deficit a safe way to lose weight?
-                  </button>
-                </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    Yes. The very basics of weight loss do come down to reducing your calorie count and increasing your activity level. Healthline reports that for many people, a deficit of around 500 calories is healthy, effective, and sustainable.
+            </div>
+            <div class="calculator__weight mobile">
+                <h5>Weight</h5>
+                <div class="weight">
+                    <div><input type="number" min="45" max="200" placeholder="70" required name="weight"></div>
+                    <div><p>kg</p></div>
+                </div>
+            </div>
+            <div class="calculator__activity mobile">
+                <h5>Activity level</h5>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle button__style" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Select
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Very active</a></li>
+                      <li><a class="dropdown-item" href="#">Active</a></li>
+                      <li><a class="dropdown-item" href="#">Not too active</a></li>
+                      <li><a class="dropdown-item" href="#">Not active at all</a></li>
+                    </ul>
                   </div>
-                </div>
-              </div>
+            </div>
+            <div class="calculator__goal mobile">
+                <h5>Goal</h5>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle button__style" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Select
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Lose weight</a></li>
+                      <li><a class="dropdown-item" href="#">Maintain weigth</a></li>
+                      <li><a class="dropdown-item" href="#">Gain weight</a></li>
+                    </ul>
+                  </div>
+            </div>
+        </div>
+        <div class="calculator__button">
+            <button type="submit" class="button__style">CALCULATE</button>
+        </div>
+      </div>
+      <!--results - falta hacer funcional el formulario y que los resultados se vean reflejados en los espacios correspondientes-->
+      <section class="result">
+        <h2>Your result is</h2>
+        <h3><span class="resultCal">----</span> calories per day</h3>
+        <ul class="resultList">
+            <li>If you need to loss some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
+            <li>If you want to mantein your weight you should consume <span class="resultCal">----</span> calories per day.</li>
+            <li>If you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
+        </ul>
+        <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
+    </section>
+
+    <div class="button__allRecipes">
+      <a href="./recipes-lowcalories.html" class="button__allRecipes1">EXPLORE LOW CALORIES RECIPES</a>
+      <a href="./recipes-lowcalories.html" class="button__allRecipes2">EXPLORE HIGH PROTEIN RECIPES</a>
+      <a href="./recipes-lowcalories.html" class="button__allRecipes3">EXPLORE LOW FAT RECIPES</a>
+    </div>
+
+    <!--faqs questions-->
+
+    <h3 class="faqs">F.A.Q.</h3>
+    <div class="accordion m-lg-5 m-md-3 m-sm-1 bg-light p-3" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              How long is it OK to be in a calorie deficit?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              We do not suggest eating in a fat loss deficit for more than 12 weeks or extreme fat loss deficit for more than 4-6 weeks. If you're struggling to eat all of your calories or macros, start by increasing your intake 100 calories each week until you work your way up to maintenance.
+            </div>
           </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How long does a calorie deficit take to see results?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Individual weight-loss experiences and time frames can vary heavily. However, most people who start dieting by cutting out a certain amount of calories each day will see results within one to two weeks, even if it's just one pound lost
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Why am I not losing weight with calorie deficit?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">         
+              If you're not losing weight in a calorie deficit you may need to adjust your stress levels, diet, and sleep patterns. Other reasons for weight gain during a calorie deficit are hormonal changes, aging, and other health conditions.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                What happens if you stay in a calorie deficit for too long?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Severely restricting your calories can decrease your metabolism and cause you to lose muscle mass. This makes it more difficult to maintain your weight loss in the long term.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                Is calorie deficit a safe way to lose weight?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Yes. The very basics of weight loss do come down to reducing your calorie count and increasing your activity level. Healthline reports that for many people, a deficit of around 500 calories is healthy, effective, and sustainable.
+              </div>
+            </div>
+          </div>
+      </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
