--- a/pages/recipes-highprotein.html
+++ b/pages/recipes-highprotein.html
@@ -73,9 +73,9 @@
               Whether you're trying to fuel up for a particularly busy day, have been intensifying your exercise routine, or you're just sick of feeling hungry all the time, boosting your protein intake may be one way to help you feel more satisfied.
             </div>
         </section>
-         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
+         <!--recipes-->
         <section class="recipes__cards">
-            <div class="card card1" style="width: 18rem;">
+            <div class="card card1">
                 <img src="../img/protein-cookies.png" class="card-img-top" alt="protein-cookies">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Protein cookies</h5>
@@ -90,7 +90,7 @@
                   <a href="./recipes-highprotein-protein-cookies.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card2" style="width: 18rem;">
+              <div class="card card2">
                 <img src="../img/spanish-potatoe-tortilla.png" class="card-img-top" alt="spanish-tortilla">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Spanish tortilla</h5>
@@ -105,7 +105,7 @@
                   <a href="./recipes-highprotein-spanish-tortilla.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card3" style="width: 18rem;">
+              <div class="card card3">
                 <img src="../img/Green-pie.png" class="card-img-top" alt="green-pie">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Green pie</h5>
@@ -120,7 +120,7 @@
                   <a href="./recipes-highprotein-green-pie.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
-              <div class="card card4" style="width: 18rem;">
+              <div class="card card4">
                 <img src="../img/marbled-pudding.png" class="card-img-top" alt="marbled-pudding">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Marbled pudding</h5>
