--- a/pages/recipes-lowfat-whole-wheat-pancakes.html
+++ b/pages/recipes-lowfat-whole-wheat-pancakes.html
@@ -105,11 +105,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/wholemeal-bread.png" alt="wholemeal-bread">
+                  <a href="./recipes-lowfat-wholemeal-bread.html"><img src="../img/wholemeal-bread.png" alt="wholemeal-bread"></a> 
                     <a href="./recipes-lowfat-wholemeal-bread.html">Wholemeal bread</a> 
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/spinach-burgers.png" alt="spinach-burgers">
+                  <a href="./recipes-lowfat-spinach-burgers.html"><img src="../img/spinach-burgers.png" alt="spinach-burgers"></a>
                     <a href="./recipes-lowfat-spinach-burgers.html">Spinach burgers</a> 
                 </div>
             </div>
