--- a/pages/shop-bmi-scales.html
+++ b/pages/shop-bmi-scales.html
@@ -77,7 +77,7 @@
             </div>
             <div class="shop__title">
                 <h3>BMI scales</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque ex, accusamus eligendi placeat quisquam impedit?</p>
+                <p>Sportsbuddy Scale is our attempt to make it easier to follow weight development. Scale comes with a free app that can be downloaded from both the App Store and Google Play. That application is called Fitgo and it gives you a wealth of information when set up with Bluetooth!</p>
                 <div class="shop__icons">
                     <div class="heart">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
@@ -124,8 +124,14 @@
         <div class="shop__primary__container">
             <div class="product__description">
                 <h5>Description</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam facere nulla tenetur quis dignissimos temporibus rem incidunt dolorum itaque voluptatum laudantium, doloribus iusto quae voluptates dicta, harum pariatur nisi doloremque.</p>
-            </div>
+                <p>
+                  <li>Size: 28 x 28 CM</li>
+                  <li>Can measure weight up to 180 kilograms</li>
+                  <li>Units of measurement: KG / LBS / ST</li>
+                  <li>Batteries: 2 x AAA batteries (Not included)</li>
+                  <li>RoHS certified</li>
+                  <li>CE certified</li>
+                </p>
         </div>
         <!--categories shop-->
         <div class="shop__secondary__container">    
