new nutritional info landing

--- a/pages/caloriedeficit.html
+++ b/pages/caloriedeficit.html
@@ -73,7 +73,7 @@
                 <br> 
             <p class="text-secondary">If you provide your body fewer calories than it needs to support these three components of calorie expenditure, you put your body into a calorie deficit. Doing so consistently for long periods results in weight loss (1Trusted Source).
                 Conversely, you will gain weight if you regularly provide your body more calories than it needs to support these functions. This is called a calorie surplus.</p>
-            <img src="../img/caloriedeficit-info.jpeg" alt="calorie-deficit-image">
+            <img src="../img/caloriedeficit-info.jpg" alt="calorie-deficit-image">
         </div>
         <!--calculator
         <div class="calculator__container calorie_landing" id="button__goCalculator">
