--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -156,7 +156,7 @@
             <h4 class="check__also">Check also</h4>
             <section class="other__categorie__shop">
                     <div class="categorie_1">
-                        <a href="./shop-shakers.html">
+                        <a href="./shop-whey-protein.html">
                             <img src="../img/wheyprotein-banner.webp" alt="whey-protein">
                             <a href="./shop-whey-protein.html">Whey protein</a>
                         </a>
