--- a/pages/shop.html
+++ b/pages/shop.html
@@ -66,17 +66,17 @@
     <main class="main__shop">
         <a class="shakers__banner" href="./shop-shakers.html">
             <div>
-                <h2 class="title__shop p-2">shakers</h2>
+                <h2 class="title__shop p-2">SHAKERS</h2>
             </div>
         </a>
         <a  class="whey__banner" href="./shop-whey-protein.html">
             <div>
-                <h2 class="title__shop p-2">whey protein</h2>
+                <h2 class="title__shop p-2">WHEY PROTEIN</h2>
             </div>
         </a>
         <a  class="scales__banner" href="./shop-bmi-scales.html">
             <div>
-                <h2 class="title__shop p-2">BMI scales</h2>
+                <h2 class="title__shop p-2">BMI SCALES</h2>
             </div>
         </a>
     </main>
