--- a/pages/shop.html
+++ b/pages/shop.html
@@ -63,8 +63,9 @@
         </nav>
     </header>
     <!--shop / categories-->
-    <main class="main__shop">
-        <a class="shakers__banner" href="./shop-shakers.html">
+    <main>
+        <div class="main__shop">
+          <a class="shakers__banner" href="./shop-shakers.html">
             <div>
                 <h2 class="title__shop p-2">SHAKERS</h2>
             </div>
@@ -79,8 +80,18 @@
                 <h2 class="title__shop p-2">BMI SCALES</h2>
             </div>
         </a>
+        </div>
+        <div class="discount__banner">
+            <h1>GET 15% OFF</h1>
+            <h2>IN YOUR FIRST PURCHASE</h2>
+            <br>
+            <div class="discount__sm__banner">
+              <h3>USING THE PROMO CODE: <span> "CD15OFF"</span></h3>
+              <p>🇩🇰 Free shipping in Denmark! 🇩🇰</p>
+            </div>
+            
+        </div>
     </main>
-
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
